--- a/index.html
+++ b/index.html
@@ -111,11 +111,9 @@
 
     <hr>
     <h3>
-        If you plan to miss a meeting in the future, please enter your name and the date you plan to miss:
+        If you plan to miss a meeting in the future, please enter the date you plan to miss:
     </h3>
     <form>
-        <label for="name">Name:</label>
-        <input text="text" id="name" name="name"/>
         <input type="date"/>
         <input type="submit" />
     </form>
