--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
   <footer>
     <p>Let's see if we can remember everyone's names!</p>
     <h3>very amazing prize if you do..!</h3>
-    <form>
+    <form >
         <label>Type in every team member's name:</label>
         <br>
         <textarea>Insert text here...</textarea>
         <br>
-        <input type="submit" />
+        <input class="submit-button" type="submit" />
     </form>
   </footer>
   <hr>
